# vision-based-person-following-robot

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pytest.ini  requirements.txt
config/: connect_to_lucy.sh  latest_config.rviz  nav_stack_config.rviz
launch/: navigation.launch
src/hsr_interfaces/: head_home.py
src/lucy/hsr_ws/: frames.gv  rostopic.txt
src/lucy/hsr_ws/.catkin_tools/profiles/default/: devel_collisions.txt
src/lucy/hsr_ws/src/: CMakeLists.txt  my_solver_params.yaml  pose_publishing.py  simple_nav_goal.py
src/lucy/hsr_ws/src/hsr_navigation/: CMakeLists.txt  package.xml
src/lucy/hsr_ws/src/hsr_navigation/launch/: navigation.launch  person_queue_manager.launch
src/lucy/hsr_ws/src/hsr_navigation/scripts/: a_star_planner.py  a_star_planner_backup.py  dialog_manager.py  field_planner.py  navigation_manager copy.py  navigation_manager.py  person_queue_manager.py  speech_recognition_node.py  test_stt.sh  waypoints_extractor.py  waypoints_follower.py
src/lucy/hsr_ws/src/hsr_perception/: CMakeLists.txt
src/lucy/hsr_ws/src/hsr_perception/launch/: navigation.launch  perception.launch  perception_updated.launch  visualization.launch
src/lucy/hsr_ws/src/hsr_perception/scripts/: behavior_loop.py  gesture_detector.py  (+5 more)
src/lucy/hsr_ws/src/hsr_test/: package.xml
src/lucy/hsr_ws/src/llm_server/: CMakeLists.txt  package.xml
src/lucy/nav_ws/src/: CMakeLists.txt
src/lucy/nav_ws/src/depthimage_to_laserscan/: CMakeLists.txt
src/lucy/nav_ws/src/hsr_head_slider/: CMakeLists.txt  package.xml
src/lucy/nav_ws/src/hsr_nav_test/: CMakeLists.txt  package.xml
tests/: conftest.py  test_behavior_loop.py  test_field_planner.py  test_gesture_detector.py  test_navigation_manager.py  test_perception_node.py
(+35 files in other folders)
